<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="top"
    android:scrollbars="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tarea.TareaActivity"
    android:background="@drawable/splashbackground">

    <ScrollView
        android:id="@+id/tarea_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinner1"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/tipo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView01"
                android:layout_below="@+id/textView1"
                android:prompt="@string/seleccionar"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/responsable">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietResponsable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/autor">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietAutor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvProyecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tietAutor"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/proyecto"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spProyecto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView01"
                android:layout_below="@+id/textView1"
                android:prompt="@string/seleccionar"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tietAutor"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/estado"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView01"
                android:layout_below="@+id/tvEstado"
                android:prompt="@string/seleccionar"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/addFormButtons"
                    android:layout_width="139dp"
                    android:layout_height="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/cancel"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/insertButton"
                    style="@style/addFormButtons"
                    android:layout_width="139dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/insert" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>