<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="top"
    android:scrollbars="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Tarea.TareaActivity"
    android:background="@drawable/splashbackground">

    <ScrollView
        android:id="@+id/tarea_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="390dp"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/titulo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:focusable="false"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:focusable="false"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tipo">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietTipoTarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:focusable="false"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="date"
                    android:focusable="false"
                    android:clickable="true"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/responsable">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietResponsable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:focusable="false"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/autor">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietAutor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:focusable="false"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/proyecto">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietProyecto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:focusable="false"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estado">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tietEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:focusable="false"
                    android:maxLines="1"
                    android:layout_marginRight="25dp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>