<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Splash.SplashActivity">

    <!--<ImageView-->
    <!--android:id="@+id/imageView1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_above="@+id/tvPorciento"-->
    <!--android:layout_alignParentStart="true"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:src=""-->
    <!--android:layout_alignParentLeft="true" />-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/poweredby"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/tvPorciento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/porciento"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvCargando"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="start"
        android:textAlignment="textStart"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tvCargando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="101dp"
        android:text="@string/loading"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>